
=======================================================
            WanT code:  Log of Changes 
=======================================================


27 Feb 2007      Parallelization of conductor implemented, divide_et_impera.f90 added. (AF)

26 Feb 2007      Long standing bug in the midpoint.f90 algorithm fixed. (AF)

20 Feb 2007      Normalization of WFs from plot.f90 further tested. nr1, nr2, nr3 vars
                 added to plot namelist to interpolate by FFT on finer real space meshes.
                 Documentation updated: README.input file split code by code, description
                 of input files deleted from the pdf manual for ease of maintainance. (AF)

09 Feb 2007      Normalization of WFs written by plot.f90 fixed. (AF)

01 Feb 2007      Cleanup in utility/sumpdos.f90 . (AF)

16 Jan 2007      configure_iotk* and iotk_config.h.in updated. make.depend files added to
                 repository: dependencies are no longer autobuilt during configuration. 
                 configure updated in calling configure_iotk.  (AF)

29 Dec 2006      flush_unit calls added todisentangle.x, wannier.x, conductor.x . (AF)

05 Dec 2006      check on the 1D fft grid added in transport (ESSL were complainig);
                 fft_scalar.f90 module updated to account for 1D stuff; workaround
                 for xlf bug (namelist reading, see KnownBugs) added to test06 input files. (AF)

02 Dec 2006      postfix var added to transport namelist. prefix, postfix, workdir vars
                 added to input files for transport calculations in tests. run*.sh
                 scripts updated coherently. sumpdos.f90 tool added to utility/ . (AF)

30 Nov 2006      write_kdata variable added to INPUT_CONDUCTOR namelist: if set to 
                 .TRUE., kpoint-resolved dos and transmittance are written
                 on output data files. (BB)
                 BUILT_DATE is added to configure.ac and set in configure.h . (AF)
