@@ -9,7 +9,8 @@
 !*********************************************
    MODULE T_egrid_module
 !*********************************************
-   USE kinds,      ONLY : dbl
+   USE kinds,           ONLY : dbl
+   USE log_module,      ONLY : log_push, log_pop
    IMPLICIT NONE
    PRIVATE 
    SAVE
@@ -50,6 +51,7 @@ CONTAINS
    IMPLICIT NONE
        CHARACTER(10)      :: subname="egrid_init"
        INTEGER  :: ie, ierr
+       CALL log_push ( 'egrid_init' )
 
        IF ( alloc )   CALL errore(subname,'already allocated', 1 )
        IF ( ne <= 0 ) CALL errore(subname,'invalid ne', -ne+1 )
@@ -67,6 +69,7 @@ CONTAINS
        ENDDO
 
        alloc = .TRUE.
+       CALL log_pop ( 'egrid_init' )
    END SUBROUTINE egrid_init
 
 
@@ -76,12 +79,14 @@ CONTAINS
    IMPLICIT NONE
        CHARACTER(16)      :: subname="egrid_deallocate"
        INTEGER :: ierr
+       CALL log_push ( 'egrid_deallocate' )
 
        IF ( ALLOCATED(egrid) ) THEN
             DEALLOCATE(egrid, STAT=ierr)
             IF (ierr/=0) CALL errore(subname,'deallocating egrid',ABS(ierr))
        ENDIF
        alloc = .FALSE.
+       CALL log_pop ( 'egrid_deallocate' )
    END SUBROUTINE egrid_deallocate
 
 
